make new TeilnehmerVerwaltungWindow